[package]
name = "web_notif"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde_json = "1.0"
web-push = "0.11.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.228"
env_logger = "0.11.8"
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
